--- a/client/style.css
+++ b/client/style.css
@@ -199,3 +199,15 @@ h2 {
 .prev-btn:hover {
     background-color: #5a6268;
 }
+
+.image-preview {
+    width: 200px;
+    height: 200px;
+    border: 2px dashed #ccc;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    object-fit: cover;
+    display: none; /* 기본적으로 숨겨둠 */
+}
+
+/* 컬러코드 : e8487c */
